<resources>
    <string name="app_name">Lock</string>
    <string name="searching">搜索中...</string>
    <string name="ble_not_supported">该设备不支持BLE</string>
    <string name="warning">温馨提示</string>
    <string name="no_devices">找不到设备</string>
    <string name="retry">重试</string>
    <string name="exist">退出</string>
    <string name="error_bluetooth_not_supported">蓝牙不支持</string>
    <string name="unknown_device">未知设备</string>
    <string name="device">设备：</string>
    <string name="no_searchdevice">未能找到对应蓝牙设备</string>
    <string name="waittoconnect">等待蓝牙连接，请稍候...</string>
    <string name="connectfailed">蓝牙连接失败</string>
    <string name="donttoconnect">无法连接到蓝牙设备</string>
    <string name="cancel">取消</string>
    <string name="search_devices">搜索设备</string>
    <string name="device_list">设备列表</string>
    <string name="find_devices">发现设备</string>
    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="ok">确认</string>
    <string name="search_newdevice">搜索新设备</string>
    <string name="light_disconnected">已断开连接</string>
    <string name="input_password">输入密码</string>
    <string name="passwordisnull">密码为空</string>
    <string name="mylock">智能锁</string>
    <string name="changelockname">修改名称</string>
    <string name="changelockpassword">修改密码</string>
    <string name="input_newpassword">请输入6位密码</string>
    <string name="connect_enable">(连接可用)</string>
    <string name="connect_unable">(不能连接)</string>
    <string name="logout">注销</string>
    <string name="account_info">个人资料</string>
    <string name="account_str">账号</string>
    <string name="version_info">版本信息</string>
    <string name="company_info">公司信息</string>
    <string name="phone_regist">手机注册</string>
    <string name="get_password">找回密码</string>
    <string name="login_str">登录</string>
    <string name="input_password_str">请输入您的密码</string>
    <string name="input_phones_str">请输入您的手机号</string>
    <string name="searching_str">正在为您扫描周边的设备...</string>
    <string name="unlock_str">点击开锁</string>
    <string name="enable_search_devices">附近可匹配的设备</string>
    <string name="no_connect_device">未连接蓝牙设备</string>
    <string name="unband_device_warn">确定解绑该设备吗</string>
</resources>
