<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200px"
        android:layout_marginLeft="40px"
        android:text="@string/phone_regist"
        android:textColor="@color/exit_text_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_password"
        android:textColor="@color/exit_text_color"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="200px"
        android:layout_marginRight="40px"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:text="@string/login_str"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_above="@id/tv_regist"
        android:layout_marginBottom="40px"
        android:paddingTop="40px"
        android:gravity="center"
        android:paddingBottom="40px"
        android:background="@color/title_background"/>
    <EditText
        android:id="@+id/password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/input_password_str"
        android:textColorHint="@color/cup_light_gray"
        android:textSize="15sp"
        android:paddingLeft="40px"
        android:paddingTop="40px"
        android:paddingBottom="40px"
        android:layout_marginBottom="40px"
        android:layout_above="@id/login_tv"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20px"
        android:layout_above="@id/password_tv">
        <EditText
            android:id="@+id/phone_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/input_phones_str"
            android:textColorHint="@color/cup_light_gray"
            android:textSize="15sp"
            android:paddingLeft="40px"
            android:paddingTop="40px"
            android:paddingBottom="40px"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40px"
            android:src="@drawable/clear"/>
    </RelativeLayout>
</RelativeLayout>