<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/del_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:background="@drawable/shape_corner_unbanddialog">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:layout_marginTop="50px"
            android:text="@string/unband_device_warn"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:layout_below="@id/title"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="40px"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/negativeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="40px"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>