<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <com.oulu.lock.view.CircleWaveView
        android:id="@+id/device_circle_wave_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />


    <TextView
        android:id="@+id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:background="@drawable/main_title_bar"
        android:gravity="center"
        android:paddingTop="25dp"
        android:text="@string/search_devices"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/back_tv"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginLeft="40px"
        android:paddingTop="25dp"
        android:drawableLeft="@drawable/back"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_action_bar"
        android:layout_marginTop="40px"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/search_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/searching"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/loading_outer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10px"
                    android:gravity="center"
                    android:text="@string/searching_str"
                    android:textColor="@color/remote_control_background"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/search_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/search_devices"/>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/devices_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:background="@drawable/shape_corner_devicelist"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/devicelist_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_height"
                android:layout_gravity="center"
                android:background="@drawable/shape_corner_devicelisttitle"
                android:gravity="center"
                android:text="@string/enable_search_devices"
                android:textColor="@color/remote_control_background"
                android:textSize="15sp" />

            <ListView
                android:id="@+id/device_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginTop="20px" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>