<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@drawable/cup_light_gray"
    android:orientation="vertical">

    <TextView
        android:id="@id/title"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/main_title_bar"
        android:paddingBottom="20px"
        android:text="个人中心"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40px"
            android:paddingTop="30px"
            android:paddingBottom="30px"
            android:textColor="@color/black"
            android:text="@string/account_info"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/account_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toLeftOf="@+id/next_iv"
            android:src="@mipmap/ic_launcher"/>
        <ImageView
            android:id="@id/next_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:src="@drawable/next"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:background="@drawable/cup_light_gray"/>
    <RelativeLayout
        android:id="@+id/account_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40px"
            android:paddingTop="30px"
            android:paddingBottom="30px"
            android:textColor="@color/black"
            android:text="@string/account_str"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/cup_light_gray"
            android:paddingLeft="40px"
            android:paddingTop="30px"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40px"
            android:paddingBottom="30px"
            android:text="12345678900"
            android:textSize="18sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/version_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:background="@color/white">
        <ImageView
            android:id="@+id/version_ivg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40px"
            android:src="@drawable/version_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/version_ivg"
            android:textColor="@color/black"
            android:text="@string/version_info"
            android:layout_marginLeft="30px"
            android:paddingTop="40px"
            android:paddingBottom="40px"
            android:textSize="18sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:src="@drawable/next"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:background="@drawable/cup_light_gray"/>
    <RelativeLayout
        android:id="@+id/company_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <ImageView
            android:id="@+id/company_ivg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40px"
            android:src="@drawable/company"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/company_info"
            android:layout_toRightOf="@id/company_ivg"
            android:layout_marginLeft="30px"
            android:paddingTop="40px"
            android:paddingBottom="40px"
            android:textSize="18sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:src="@drawable/next"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:background="@color/white"
        android:textColor="@color/exit_text_color"
        android:text="@string/logout"
        android:gravity="center"
        android:paddingTop="30px"
        android:paddingBottom="30px"
        android:textSize="18sp"
        />
</LinearLayout>
